--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,7 @@ node_js:
 cache:
   directories:
   - node_modules
-script: npm run build
+script: 
+  - npm run build
+  - npm test
+  - npm run build
